fix: column wiew for card's filters on mobile

--- a/src/app/cards/pages/cards-grid-page/cards-grid-page.component.scss
+++ b/src/app/cards/pages/cards-grid-page/cards-grid-page.component.scss
@@ -28,16 +28,6 @@
 }
 
 @media only screen and (max-width: 767px) {
-  .filters-container {
-    .panel {
-      .filters-container {
-        .filter {
-          width: 100%;
-        }
-      }
-    }
-  }
-
   .card-actions {
     gap: 0.25rem;
   }
